--- a/k_function.ipynb
+++ b/k_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -13,6 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.animation as animation\n",
     "import TridiagonalMatrixHandler as tmh\n",
+    "from numba import njit\n",
     "\n",
     "%matplotlib notebook"
    ]
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -47,7 +48,7 @@
      "text": [
       "Коэффициент миграции (D) = 0.5\tРождения новых людей (a) = 2.0\n",
       "Смертность населения (σ) = 1.0\tЁмкость среды K = 2.0\n",
-      "Количество точек по ОХ (N) = 100\tКоличество точек по времени (KT) = 1000\n",
+      "Количество точек по ОХ (N) = 10000\tКоличество точек по времени (KT) = 10000\n",
       "\n",
       "Функция по которой считаем доступные ресурсы T(i) = 6000/i * 2.0\n"
      ]
@@ -56,6 +57,7 @@
    "source": [
     "tmh.showAllConstant()\n",
     "\n",
+    "@njit\n",
     "def allSourceFraction(numerator, i, u1=0): \n",
     "    denominator = 6000/i*tmh.sourceKoeff\n",
     "    return numerator/denominator\n",
