--- a/t_const.ipynb
+++ b/t_const.ipynb
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -954,17 +954,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Speed: 476.4769539078155\n"
+      "Speed: 330.33066132264526\n"
      ]
     }
    ],
    "source": [
-    "diff = 0.5\n",
+    "diff = 0.00000001\n",
     "value = 0\n",
     "for i in range(1, tmh.NX - 1):\n",
-    "    if abs(u[int(tmh.NX/2), int(tmh.KT/2)] - u[i, int(tmh.KT/2) + 1]) < diff and x[int(tmh.NX/2)] != x[i]:\n",
-    "        diff = abs(u[int(tmh.NX/2), int(tmh.KT/2)] - u[i, int(tmh.KT/2) + 1])\n",
-    "        value = abs(x[int(tmh.NX/2)] - x[i])\n",
+    "    if abs(u[int(tmh.NX/3), int(tmh.KT/3)] - u[i, int(tmh.KT/3) + 1]) < diff and x[int(tmh.NX/3)] != x[i]:\n",
+    "        diff = abs(u[int(tmh.NX/3), int(tmh.KT/3)] - u[i, int(tmh.KT/3) + 1])\n",
+    "        value = abs(x[int(tmh.NX/3)] - x[i])\n",
     "print('Speed:', value/tmh.tau)\n"
    ]
   },
