--- a/t_integrall_and_K_function.ipynb
+++ b/t_integrall_and_K_function.ipynb
@@ -39,9 +39,8 @@
    "metadata": {},
    "source": [
     "# $$\\frac{\\partial u}{\\partial t}=D\\frac{\\partial^2 u}{\\partial x^2} + au(1-\\frac{I(u)}{C(I)}) - σu;$$\n",
-    "# $u(x,0)=e^{-t^2}; \\qquad x∈(1,L)$\n",
-    "# $u(0,0)=2;$\n",
-    "# $\\frac{\\partial u}{\\partial x}|_{x=0,L} = 0;$"
+    "# $$u(x,0)=e^{-i^2}; \\qquad x∈(0,L); i∈(0,L)$$\n",
+    "# $$\\frac{\\partial u}{\\partial x}|_{x=0,L} = 0;$$"
    ]
   },
   {
