--- a/t_const.ipynb
+++ b/t_const.ipynb
@@ -940,7 +940,7 @@
     }
    ],
    "source": [
-    "diff = 0.00000001\n",
+    "diff = 0.5\n",
     "value = 0\n",
     "for i in range(1, tmh.NX - 1):\n",
     "    if abs(u[int(tmh.NX/3), int(tmh.KT/3)] - u[i, int(tmh.KT/3) + 1]) < diff and x[int(tmh.NX/3)] != x[i]:\n",
